<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cartelera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buscar">Buscar</string>
    <string name="msg_consultando_informacion">Consultando información. Espere, por favor.</string>
    <string name="msg_consultando_pelicula">Recuperando información de la película. Espere, por favor.</string>
    <string name="msg_no_pelicula">No se ha encontrado ninguna película con ese título.</string>
    <string name="buscar_pelicula">Buscar película</string>
    <string name="titulo_pelicula">Título de la película</string>
    <string name="peliculas_encontradas">Películas encontradas</string>
    <string name="titulo">Título</string>
    <string name="titulo_original">Título original</string>
    <string name="fecha_estreno">Día de estreno</string>
    <string name="descripcion">Descripción</string>
    <string name="no_disponible">No disponible</string>
    <string name="proximos_lanzamientos">Próximos lanzamientos</string>
    <string-array name="menu_array">
        <item>Todos los géneros</item>
        <item>Acción</item>
        <item>Drama</item>
        <item>Comedia</item>
        <item>Romance</item>
    </string-array>
	<string name="drawer_open">Abrir el navegador lateral</string>
    <string name="drawer_close">Cerrar el navegador lateral</string>
    <string name="action_websearch">Buscar en la web</string>
    <string name="sobre_mi">Sobre mi</string>
    <string name="yo">Víctor Palma Carrasco</string>
    <string name="descripcion_yo">Desarrollador Android especializado en aplicaciones para el ámbito de la Ingeniería Topográfica y Geodésica, y también dentro del ámbito de la Ingeniería Civil. Además, desarrollo todo tipo de aplicaciones, realizando peticiones desde las mismas a servicios web.</string>
    <string name="descripcion_yo2">Para cualquier información, puedes contactar conmigo en la dirección que muestro abajo.</string>
    <string name="yo_correo">vpalmacarrasco@gmail.com</string>
    <string name="referencia_api1">Esta aplicación consume el servicio web facilitado por</string>
    

</resources>
