<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#33088901"
    android:layout_height="match_parent">
    
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:layout_weight="0.90"
		        android:gravity="center_horizontal"
		        android:text="@string/titulo"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

		    <ImageView
		        android:id="@+id/imageView2"
		        android:layout_marginTop="3dip"
		        android:layout_width="32dip"
		        android:layout_height="32dip"
		        android:src="@drawable/ic_buscar" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip"
			android:layout_width="match_parent"
			android:layout_height="1dip"
			android:background="#FF000000" >
		</LinearLayout>
		
		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/titulo_original"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:textAppearance="?android:attr/textAppearanceSmall" />
		
		<TextView
			android:id="@+id/textView3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fecha_estreno"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:textAppearance="?android:attr/textAppearanceSmall" />
		
		<ImageView
			android:id="@+id/imageView1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
			android:layout_marginTop="5dip"
			android:contentDescription="@string/app_name"
			android:src="@drawable/ic_launcher" />
		
		<TextView
			android:id="@+id/textView4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:text="@string/descripcion"
			android:textAppearance="?android:attr/textAppearanceSmall" />
	</LinearLayout>
	
</ScrollView>